Tue Nov 18 01:35:50 1997  John W. Eaton  <jwe@bevo.che.wisc.edu>

	* time/tic.m: Rename _time_tic_called to __tic_toc_timestamp__.
	* time/toc.m: Likewise.

	* image/colormap.m: Rename CURRENT_COLOR_MAP to __current_color_map__.

	* plot/mplot.m, plot/multiplot.m, plot/subplot.m: Don't do
	anything special for automatic_replot when in multiplot mode --
	recent 3.6beta releases handle this correctly.

	* plot/figure.m: Ensure that we are not in multiplot mode before
	setting the terminal type.

	* plot/mplot.m, plot/multiplot.m, plot/oneplot.m, plot/subplot.m,
 	plot/subwindow.m: Use leading and trailing underscores for
 	`private' globals.

	* plot/oneplot.m: Don't do anything if gnuplot_has_multiplot is false.

Fri Nov 14 10:53:11 1997  John W. Eaton  <jwe@bevo.che.wisc.edu>

	* plot/__pltopt__.m: Use sprintf instead of strcat when adding TITLE.

Fri Oct 10 11:18:10 1997  John W. Eaton  <jwe@bevo.che.wisc.edu>

	* specfun/gammai.m: Avoid problems with whitespace when
	constructing matrices.

	* polynomial/polyfit.m: Compute yf correctly.  From Seung Lee
	<SJL@nrc.gov>.  Also return yf in the same orientation as the
	original y vector.

Fri Sep 19 17:04:40 1997  John W. Eaton  <jwe@bevo.che.wisc.edu>

	* linear-algebra/cross.m: Use direct formula instead of calling
	det three times in a loop.  If both args are column (row) vectors,
	return a column (row) vector.  If they don't match, pay attention
	to the value of prefer_column_vectors.

Thu Aug 28 15:31:20 1997  Rolf Fabian <fabian@olymp.Umwelt.TU-Cottbus.de>

	* polynomial/polyvalm.m: Don't assume orthogonal eigenvectors for
	nonsymmetric matrices.

	* general/tril.m: Fix usage message.

	* polynomial/polyvalm.m: Fix error messages.
	* polynomial/polyderiv.m: Likewise.
	* polynomial/polyval.m: Likewise.

Wed Aug 13 14:14:16 1997  John W. Eaton  <jwe@bevo.che.wisc.edu>

	* strings/blanks.m: Allow blanks(0) to return empty string.
	Allow negative arguments if treat_neg_dim_as_zero is true.
