@@ -64,17 +64,13 @@ function subplot (rows, columns, index)
 
   ## global variables to keep track of multiplot options
 
-  global __multiplot_mode__
-  global __multiplot_xsize__
-  global __multiplot_ysize__
-  global __multiplot_xn__
-  global __multiplot_yn__
-  global __multiplot_xi__
-  global __multiplot_yi__
-
-  if (! exist ("__multiplot_mode__"))
-    __multiplot_mode__ = 0;
-  endif
+  global __multiplot_mode__ = 0;
+  global __multiplot_xsize__;
+  global __multiplot_ysize__;
+  global __multiplot_xn__;
+  global __multiplot_yn__;
+  global __multiplot_xi__;
+  global __multiplot_yi__;
 
   if (nargin != 3 && nargin != 1)
     usage ("subplot (rows, columns, index) or subplot (rcn)");
